--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.0.0+2
+  firebase_auth: ^3.7.0
+  firebase_core: ^1.21.1
+  email_validator: ^2.1.17
  
 
 dev_dependencies:
